--- a/todo.txt
+++ b/todo.txt
@@ -15,6 +15,8 @@ Important:
 
 
 Next time:
+- Pull out directive search code into separate function and write unit tests
+    - See findDirective() function
 Note: Not actually copying template file contents...
 - Parse layout contents
 - Dump template contents into layout and write to output file
